philly-311-citywide-meta/src/objects/Open311Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fields belonging to a Record Type</description>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>Case Record Type</description>
        <label>Case Record Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Fields_1__c</fullName>
        <description>API Name of the Fields</description>
        <label>Custom Fields 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Fields_2__c</fullName>
        <description>API Name of the Fields</description>
        <label>Custom Fields 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Fields_3__c</fullName>
        <label>Custom Fields 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Code_Name_1__c</fullName>
        <description>Encrypted value for Corresponding Field in Custom Field 1</description>
        <label>Encrypted Code Name 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Code_Name_2__c</fullName>
        <description>Encrypted value for Corresponding Field Custom Fields 2</description>
        <label>Encrypted Code Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Code_Name_3__c</fullName>
        <label>Encrypted Code Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Required_Fields__c</fullName>
        <description>Enter all Not Required Field&apos;s Encrypted Code</description>
        <label>Not Required Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Open311Field</label>
</CustomObject>